# AtosPraksa-FinalProject

./: .gitignore  CMakeLists.txt  Constants.py  Q_Learning_TTT_v1.py  Q_Learning_TTT_wGUI.py  README.md  Readme.md  Tkinter_GUI_TTT.py  dockerfile  gameScreen.py  menu.py  policy_easy_p1  policy_easy_p2  policy_hard_p1  policy_normal_p1  policy_normal_p2  policy_o.csv  policy_p2  policy_x.csv  q_learning_ttt  ttt_q_learning.py
AppiumTTT/: .project  TTTReport.html  pom.xml
AppiumTTT/test-output/: emailable-report.html  index.html  (+2 more)
ClientServerDemo/: settings.gradle
TTT_w_GUI/: ai_player.py  constants.py  difficultyscreen.py  game_logic.py  game_screen.py  global_variables.py  historyscreen.py  human_player.py  main.py  mainmenuscreen.py  player.py  playvscomp_screen.py  popups.py  replay_game.py  requirements.txt  tictactoescreen.py
TicTacToeCpp/: settings.gradle
TicTacToeCpp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  policy_o.csv  policy_x.csv
TicTacToeCpp/app/src/main/cpp/include/Tic_Tac_Toe/: Qtable.h  board.h  constants.h  game.h  helper_functions.h  human_player.h  minmax_player.h  player.h  q_player.h  random_player.h
TicTacToeCpp/app/src/main/cpp/src/: Qtable.cpp  board.cpp  game.cpp  helper_functions.cpp  human_player.cpp  main.cpp  minmax_player.cpp  player.cpp  q_player.cpp  random_player.cpp
server/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/: Qtable.cpp  board.cpp  game.cpp  helper_functions.cpp  human_player.cpp  main.cpp  minmax_player.cpp  player.cpp  q_player.cpp  random_player.cpp
tic_tac_toe_backend/: asgi.py  settings.py  urls.py  views.py  wsgi.py
(+89 files in other folders)
